force-app/main/default/objects/PoP__c/PoP__c.object-meta.xml
<CustomObject>
    <label>PoP</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PoP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PoP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>