force-app/main/default/objects/PoP__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Brisbane</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Gold Coast</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Sydney</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>