force-app/main/default/objects/PoP__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Pending Application(ready to be pickup by Azure logic app)

Pending Revocation(ready to be pickup by Azure logic app)

Application Successful(PoP status is applied for the user)

Revocation Successful(PoP status is revoked for the user)

Error</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Application</fullName>
            </value>
            <value>
                <fullName>Pending Revocation</fullName>
            </value>
            <value>
                <fullName>Application Successful</fullName>
            </value>
            <value>
                <fullName>Revocation Successful</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>