force-app/main/default/objects/PoP__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PingOne Action</fullName>
            </value>
            <value>
                <fullName>Private Gaming Room Access Revoke</fullName>
            </value>
            <value>
                <fullName>Stop Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>